<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ximpify</groupId>
    <artifactId>RentABot</artifactId>
    <version>1.3.0</version>
    <packaging>jar</packaging>

    <name>RentABot</name>
    <description>Rent bot players for AFK farms - A Minecraft plugin by MubTaXim</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <!-- Paper Repository -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        
        <!-- MCProtocolLib (GeyserMC) -->
        <repository>
            <id>opencollab-snapshots</id>
            <url>https://repo.opencollab.dev/maven-snapshots/</url>
        </repository>
        <repository>
            <id>opencollab-releases</id>
            <url>https://repo.opencollab.dev/maven-releases/</url>
        </repository>
        
        <!-- Vault -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        
        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- MCProtocolLib - The core bot library -->
        <!-- Supports Minecraft 1.21.x versions (updates with GeyserMC) -->
        <dependency>
            <groupId>org.geysermc.mcprotocollib</groupId>
            <artifactId>protocol</artifactId>
            <version>1.21.9-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <!-- Exclude QUIC support - not needed for Minecraft -->
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-codec-native-quic</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-codec-classes-quic</artifactId>
                </exclusion>
                <!-- Exclude unnecessary Netty transports -->
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-transport-rxtx</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-transport-sctp</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-transport-udt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- Vault API -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- SQLite for storage -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.1.0</version>
            <scope>compile</scope>
        </dependency>
        
        <!-- HikariCP for connection pooling -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>
        
        <!-- SLF4J API (required by HikariCP and MCProtocolLib) -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.9</version>
            <scope>compile</scope>
        </dependency>
        
        <!-- SLF4J Simple Provider - prevents "No SLF4J providers found" warnings -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar>
                            <relocations>
                                <relocation>
                                    <pattern>org.geysermc.mcprotocollib</pattern>
                                    <shadedPattern>com.ximpify.rentabot.libs.mcprotocollib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.steveice10</pattern>
                                    <shadedPattern>com.ximpify.rentabot.libs.steveice10</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.xerial</pattern>
                                    <shadedPattern>com.ximpify.rentabot.libs.xerial</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>com.ximpify.rentabot.libs.hikari</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.slf4j</pattern>
                                    <shadedPattern>com.ximpify.rentabot.libs.slf4j</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <!-- Exclude QUIC native libraries - not needed for Minecraft -->
                                        <exclude>META-INF/native/*quiche*</exclude>
                                        <exclude>META-INF/native/libnetty_quiche*</exclude>
                                        <exclude>META-INF/native/netty_quiche*</exclude>
                                        <!-- Exclude unused platform SQLite natives (keep Linux x86_64, Windows x86_64, Mac) -->
                                        <exclude>org/sqlite/native/Linux-Android/**</exclude>
                                        <exclude>org/sqlite/native/Linux/arm/**</exclude>
                                        <exclude>org/sqlite/native/Linux/armv6/**</exclude>
                                        <exclude>org/sqlite/native/Linux/armv7/**</exclude>
                                        <exclude>org/sqlite/native/Linux/ppc64/**</exclude>
                                        <exclude>org/sqlite/native/Linux-Musl/**</exclude>
                                        <exclude>org/sqlite/native/FreeBSD/**</exclude>
                                        <exclude>org/sqlite/native/AIX/**</exclude>
                                        <exclude>org/sqlite/native/HPUX/**</exclude>
                                        <exclude>org/sqlite/native/SunOS/**</exclude>
                                        <exclude>org/sqlite/native/Linux/android-arm/**</exclude>
                                        <exclude>org/sqlite/native/Linux/android-arm64/**</exclude>
                                        <!-- Exclude Netty natives for unused platforms (keep Linux x86_64) -->
                                        <exclude>META-INF/native/libnetty_transport*aarch*</exclude>
                                        <exclude>META-INF/native/libnetty_transport*riscv*</exclude>
                                        <exclude>META-INF/native/libnetty_transport*osx*</exclude>
                                        <exclude>META-INF/native/libnetty_resolver*osx*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
